--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ documentation = "https://docs.rs/serde-json-wasm"
 edition = "2018"
 keywords = ["serde", "json", "wasm"]
 license = "MIT OR Apache-2.0"
-name = "serde-json-wasm"
+name = "casper-serde-json-wasm"
 readme = "README.md"
 repository = "https://github.com/CosmWasm/serde-json-wasm"
 version = "0.4.1"
@@ -31,4 +31,4 @@ serde_json = { version ="^1.0.59", default-features = false, features = ["alloc"
 
 [dev-dependencies]
 serde_derive = "^1.0.80"
-#serde_json = { version ="^1.0.59", default-features = false }
+
