Rename to casper-serde-json-wasm

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ documentation = "https://docs.rs/serde-json-wasm"
 edition = "2018"
 keywords = ["serde", "json", "wasm"]
 license = "MIT OR Apache-2.0"
-name = "serde-json-wasm"
+name = "casper-serde-json-wasm"
 readme = "README.md"
 repository = "https://github.com/CosmWasm/serde-json-wasm"
 version = "0.4.1"
